--- a/web/package.json
+++ b/web/package.json
@@ -15,7 +15,8 @@
     "daisyui": "^2.51.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.8.0"
+    "react-icons": "^4.8.0",
+    "theme-change": "^2.5.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
